# birdr

./: .gitignore  README.adoc  README.rst  guix.scm  manifest.scm  pre-inst-env.sh  pyproject.toml  requirements.txt
birdr/: __main__.py  controller.py  model.py  view.py
scripts/: birdr  setup
