# SPDX-FileCopyrightText: 2023 Brian Kubisiak <brian@kubisiak.com>
#
# SPDX-License-Identifier: GPL-3.0-only

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "birdr"
version = "0.1.1"
authors = [
    { name = "Brian Kubisiak", email = "brian@kubisiak.com" },
]
description = "Record and track bird sightings and checklists"
dependencies = [
    "click == 8.*",
    "rich == 13.*",
    "sqlalchemy == 1.4.*",
]

[project.scripts]
birdr = "birdr.view:main"

[tool.black]
line-length = 79

[tool.mypy]
disallow_untyped_defs = true

[tool.pylint.MAIN]
disable = [
    "R0903",  # too-few-public-methods
]

[tool.setuptools]
packages = ["birdr"]